Add security-manager resource lookup coverage for Formatters$12